--- a/STracker/app/src/main/res/layout/activity_main.xml
+++ b/STracker/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,26 @@
     android:background="@drawable/bckg"
     tools:context=".MainActivity">
 
+    <LinearLayout
+        android:layout_width="369dp"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/greeting"
+            android:layout_width="242dp"
+            android:layout_height="wrap_content"
+            android:text="TextView" />
+
+        <Button
+            android:id="@+id/logoutButton"
+            android:layout_width="117dp"
+            android:layout_height="wrap_content"
+            android:onClick="onLogoutButtonPressed"
+            android:text="Logout" />
+
+    </LinearLayout>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -100,6 +120,9 @@
             />
 
     </LinearLayout>
+	
+	<!--Laiko skaiciavimas veiks pagal tai kada naudotojas juda-->
+	<!--
     <Button
         android:id="@+id/pauseButton"
         android:layout_width="wrap_content"
@@ -108,4 +131,6 @@
         android:text="Pause"
         android:textColor="@color/white"
         android:onClick="onPauseButtonPressed"/>
+		-->
+
 </LinearLayout>
