--- a/STracker/app/src/main/res/layout/activity_main.xml
+++ b/STracker/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,24 @@
             android:layout_height="wrap_content"
             android:text="TextView" />
 
+        <TextView
+            android:id="@+id/totalStepsDisplay"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="TextView" />
+
+        <TextView
+            android:id="@+id/totalDistanceDisplay"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="TextView" />
+
+        <TextView
+            android:id="@+id/totalTimeDisplay"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="TextView" />
+
         <Button
             android:id="@+id/logoutButton"
             android:layout_width="117dp"
@@ -32,34 +50,35 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Step counter"
         android:layout_gravity="center"
-        android:padding="24dp"
         android:layout_margin="6dp"
-        android:textSize="40sp"
+        android:padding="24dp"
+        android:text="Step counter"
         android:textColor="@color/black"
-        android:textStyle="bold"
-        />
+        android:textSize="40sp"
+        android:textStyle="bold" />
+
     <TextView
+        android:id="@+id/stepCountTargetTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:id="@+id/stepCountTargetTextView"
         android:layout_marginTop="5dp"
-        android:textColor="@color/black"
-        android:textSize="20sp"
         android:text="Sample goal: 5000"
-        />
-    <ProgressBar android:id="@+id/progressBar"
-        android:layout_width="130dp"
-        android:layout_height="200dp"
+        android:textColor="@color/black"
+        android:textSize="20sp" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
         style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="94dp"
+        android:layout_height="89dp"
         android:layout_gravity="center"
         android:layout_marginTop="10dp"
         android:background="@drawable/circular"
         android:padding="10dp"
-        android:progressDrawable="@drawable/progress"
-        />
+        android:progressDrawable="@drawable/progress" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -68,18 +87,20 @@
         <ImageView
             android:layout_width="60dp"
             android:layout_height="70dp"
-            android:src="@drawable/footsteps_8738400"/>
-        <TextView android:id="@+id/stepCountTextView"
-            android:layout_height="wrap_content"
+            android:src="@drawable/footsteps_8738400" />
+
+        <TextView
+            android:id="@+id/stepCountTextView"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:padding="20dp"
             android:text="Steps: 0"
-            android:padding="20dp"
-            android:textSize="24sp"
             android:textColor="@color/black"
-            android:layout_gravity="center"
-            />
+            android:textSize="24sp" />
 
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -88,18 +109,20 @@
         <ImageView
             android:layout_width="60dp"
             android:layout_height="70dp"
-            android:src="@drawable/distance"/>
-        <TextView android:id="@+id/stepDistanceTextView"
-            android:layout_height="wrap_content"
+            android:src="@drawable/distance" />
+
+        <TextView
+            android:id="@+id/stepDistanceTextView"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:padding="20dp"
             android:text="Distance: 0"
-            android:padding="20dp"
-            android:textSize="24sp"
             android:textColor="@color/black"
-            android:layout_gravity="center"
-            />
+            android:textSize="24sp" />
 
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -108,20 +131,21 @@
         <ImageView
             android:layout_width="60dp"
             android:layout_height="70dp"
-            android:src="@drawable/time"/>
-        <TextView android:id="@+id/stepTimeTextView"
-            android:layout_height="wrap_content"
+            android:src="@drawable/time" />
+
+        <TextView
+            android:id="@+id/stepTimeTextView"
             android:layout_width="match_parent"
-            android:text="Time: 0"
-            android:padding="20dp"
-            android:textSize="24sp"
-            android:textColor="@color/black"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
-            />
+            android:padding="20dp"
+            android:text="Time: 0"
+            android:textColor="@color/black"
+            android:textSize="24sp" />
 
     </LinearLayout>
-	
-	<!--Laiko skaiciavimas veiks pagal tai kada naudotojas juda-->
+
+    <!--Laiko skaiciavimas veiks pagal tai kada naudotojas juda-->
 	<!--
     <Button
         android:id="@+id/pauseButton"
