--- a/STracker/app/src/main/res/layout/activity_main.xml
+++ b/STracker/app/src/main/res/layout/activity_main.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/white"
     android:padding="20dp"
-    android:background="@drawable/bckg"
     tools:context=".MainActivity">
 
     <LinearLayout
@@ -18,24 +18,28 @@
             android:id="@+id/greeting"
             android:layout_width="242dp"
             android:layout_height="wrap_content"
+            android:textColor="@color/black"
             android:text="TextView" />
 
         <TextView
             android:id="@+id/totalStepsDisplay"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="@color/black"
             android:text="TextView" />
 
         <TextView
             android:id="@+id/totalDistanceDisplay"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="@color/black"
             android:text="TextView" />
 
         <TextView
             android:id="@+id/totalTimeDisplay"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="@color/black"
             android:text="TextView" />
 
         <Button
