--- a/STracker/app/src/main/res/layout/activity_main.xml
+++ b/STracker/app/src/main/res/layout/activity_main.xml
@@ -4,50 +4,46 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/logged"
     android:orientation="vertical"
-    android:background="@color/white"
     android:padding="20dp"
     tools:context=".MainActivity">
 
     <LinearLayout
         android:layout_width="369dp"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="50dp"
         android:orientation="vertical">
+
 
         <TextView
             android:id="@+id/greeting"
             android:layout_width="242dp"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:text="TextView" />
+            android:text="TextView"
+            android:textColor="@color/black" />
 
         <TextView
             android:id="@+id/totalStepsDisplay"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:text="TextView" />
+            android:text="TextView"
+            android:textColor="@color/black" />
 
         <TextView
             android:id="@+id/totalDistanceDisplay"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:text="TextView" />
+            android:text="TextView"
+            android:textColor="@color/black" />
 
         <TextView
             android:id="@+id/totalTimeDisplay"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:text="TextView" />
-
-        <Button
-            android:id="@+id/logoutButton"
-            android:layout_width="117dp"
-            android:layout_height="wrap_content"
-            android:onClick="onLogoutButtonPressed"
-            android:text="Logout" />
+            android:text="TextView"
+            android:textColor="@color/black" />
 
     </LinearLayout>
 
@@ -91,13 +87,14 @@
         <ImageView
             android:layout_width="60dp"
             android:layout_height="70dp"
-            android:src="@drawable/footsteps_8738400" />
+            android:src="@drawable/steps" />
 
         <TextView
             android:id="@+id/stepCountTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:background="#45FFFFFF"
             android:padding="20dp"
             android:text="Steps: 0"
             android:textColor="@color/black"
@@ -113,13 +110,14 @@
         <ImageView
             android:layout_width="60dp"
             android:layout_height="70dp"
-            android:src="@drawable/distance" />
+            android:src="@drawable/distance1" />
 
         <TextView
             android:id="@+id/stepDistanceTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:background="#45FFFFFF"
             android:padding="20dp"
             android:text="Distance: 0"
             android:textColor="@color/black"
@@ -135,13 +133,14 @@
         <ImageView
             android:layout_width="60dp"
             android:layout_height="70dp"
-            android:src="@drawable/time" />
+            android:src="@drawable/time1" />
 
         <TextView
             android:id="@+id/stepTimeTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:background="#45FFFFFF"
             android:padding="20dp"
             android:text="Time: 0"
             android:textColor="@color/black"
@@ -149,8 +148,17 @@
 
     </LinearLayout>
 
+    <Button
+        android:id="@+id/logoutButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right|top"
+        android:layout_marginTop="-600dp"
+        android:onClick="onLogoutButtonPressed"
+        android:text="Logout" />
+
     <!--Laiko skaiciavimas veiks pagal tai kada naudotojas juda-->
-	<!--
+    <!--
     <Button
         android:id="@+id/pauseButton"
         android:layout_width="wrap_content"
