--- a/client/src/styles/Home.css
+++ b/client/src/styles/Home.css
@@ -37,10 +37,48 @@
   }
 }
 
-
+/*
 @media (min-width: 1536px) {
   .container {
-    max-width: 1020px !important;
+    max-width: 1536px !important;
+    margin: 0 auto;
+  }
+}
+*/
+
+/*
+@media (min-width: 1280px) and (max-width: 1536px) {
+  .container {
+    max-width: 1280px !important;
+    margin: 0 auto;
+  }
+}
+*/
+
+@media (min-width: 1024px){
+  .container {
+    max-width: 1024px !important;
+    margin: 0 auto;
+  }
+}
+
+@media (min-width: 784px) and (max-width: 1024px) {
+  .container {
+    max-width: 784px !important;
+    margin: 0 auto;
+  }
+}
+
+@media (min-width: 640px) and (max-width: 784px) {
+  .container {
+    max-width: 640px !important;
+    margin: 0 auto;
+  }
+}
+
+@media (max-width: 640px) {
+  .container {
+    max-width: 500px !important;
     margin: 0 auto;
   }
 }
