--- a/STracker/app/src/main/res/layout/activity_login.xml
+++ b/STracker/app/src/main/res/layout/activity_login.xml
@@ -33,9 +33,15 @@
             android:layout_below="@id/loginLabel"
             android:layout_centerHorizontal="true"
             android:layout_gravity="center"
-            android:layout_marginTop="0dp"
+            android:layout_marginTop="-10dp"
+            android:background="@drawable/input_bg"
+            android:drawableLeft="@drawable/notif_icon"
             android:hint="Username"
             android:inputType="text"
+            android:paddingLeft="20dp"
+            android:paddingTop="10dp"
+            android:paddingRight="10dp"
+            android:paddingBottom="10dp"
             android:textAlignment="center"
             android:textColor="@android:color/black" />
 
@@ -45,10 +51,16 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/usernameEditText"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="40dp"
             android:layout_gravity="center"
+            android:layout_marginTop="40dp"
+            android:background="@drawable/input_bg"
+            android:drawableLeft="@android:drawable/ic_lock_idle_lock"
             android:hint="Password"
             android:inputType="textPassword"
+            android:paddingLeft="20dp"
+            android:paddingTop="10dp"
+            android:paddingRight="10dp"
+            android:paddingBottom="10dp"
             android:textAlignment="center"
             android:textColor="@android:color/black" />
 
@@ -60,8 +72,8 @@
             android:layout_centerHorizontal="true"
             android:layout_gravity="center"
             android:layout_marginTop="100dp"
+            android:background="@drawable/btn_bg"
             android:text="Login"
-            android:background="@color/colorAccent"
             android:textAlignment="center" />
 
         <ImageView
