--- a/STracker/app/src/main/res/values/colors.xml
+++ b/STracker/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="light_blue">#95bbd4</color>
+    <color name="dark_blue">#4a86e8</color>
 </resources>
