--- a/STracker/app/src/main/res/layout/activity_faq.xml
+++ b/STracker/app/src/main/res/layout/activity_faq.xml
@@ -8,24 +8,6 @@
     android:background="@drawable/logged"
     tools:context=".FAQActivity">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardView"
-        android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:layout_margin="30dp"
-        android:layout_marginBottom="132dp"
-        android:foregroundGravity="center"
-        app:cardCornerRadius="30dp"
-        app:cardElevation="20dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintVertical_bias="0.0">
-
-    </androidx.cardview.widget.CardView>
-
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
@@ -33,30 +15,124 @@
         android:layout_gravity="center"
         android:layout_margin="6dp"
         android:background="@drawable/text_bg"
-        android:padding="24dp"
-        android:text="FAQ/ About Us"
+        android:padding="20dp"
+        android:text="FAQ"
         android:textColor="@color/white"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.56"
+        app:layout_constraintHorizontal_bias="0.506"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.2" />
+        app:layout_constraintVertical_bias="0.086" />
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <TextView
+        android:id="@+id/stepCountTextView"
+        android:layout_width="331dp"
+        android:layout_height="66dp"
         android:layout_gravity="center"
+
+        android:layout_marginTop="12dp"
+        android:background="@drawable/text_bg"
+        android:padding="20dp"
+        android:text="Do you need to register to use this app?"
+        android:textColor="@color/white"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintVertical_bias="0.008" />
+
+    <TextView
+        android:id="@+id/stepCountTextView"
+        android:layout_width="331dp"
+        android:layout_height="66dp"
+        android:layout_gravity="center"
+
+        android:background="@drawable/text_bg"
+        android:padding="20dp"
+        android:text="Yes, you can only register on the website."
+        android:textColor="@color/white"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.026"
-        app:srcCompat="@drawable/logo" />
+        app:layout_constraintVertical_bias="0.357"
+        tools:layout_editor_absoluteX="80dp" />
+
+    <TextView
+        android:id="@+id/stepCountTextView"
+        android:layout_width="255dp"
+        android:layout_height="63dp"
+        android:layout_gravity="center"
+
+        android:background="@drawable/text_bg"
+        android:padding="20dp"
+        android:text="Are group activities free?"
+        android:textColor="@color/white"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintVertical_bias="0.347" />
+
+    <TextView
+        android:id="@+id/stepCountTextView"
+        android:layout_width="331dp"
+        android:layout_height="66dp"
+        android:layout_gravity="center"
+
+        android:background="@drawable/text_bg"
+        android:padding="20dp"
+        android:text="Yes, they are free."
+        android:textColor="@color/white"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintVertical_bias="0.494" />
+
+    <TextView
+        android:id="@+id/stepCountTextView"
+        android:layout_width="165dp"
+        android:layout_height="78dp"
+        android:layout_gravity="center"
+        android:background="@drawable/text_bg"
+        android:padding="20dp"
+        android:text="About Us"
+        android:textColor="@color/white"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintVertical_bias="0.711" />
+
+    <TextView
+        android:id="@+id/stepCountTextView"
+        android:layout_width="385dp"
+        android:layout_height="133dp"
+        android:layout_gravity="center"
+
+        android:background="@drawable/text_bg"
+        android:padding="20dp"
+        android:text="We are a small company with a mission to bring communities together. By using technologies that are easily accessible by everyone we strive to make it as easy as possible."
+        android:textColor="@color/white"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.515"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintVertical_bias="0.992" />
+
 
     <Button
         android:id="@+id/back"
@@ -66,9 +142,9 @@
         android:text="Back to Login"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.948"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.956" />
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
